fix header home link bug, fix alignment on mobile devices

--- a/src/scss/components/_avatar-card.scss
+++ b/src/scss/components/_avatar-card.scss
@@ -25,6 +25,6 @@
 	font-weight: $fontWeightBold;
 }
 
-.avatar-card__text {
+.avatar-card__content-text {
 	margin-bottom: 10px;
 }
