--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -12,3 +12,7 @@
 	cursor: pointer;
 	text-decoration: none;
 }
+
+.button--inline {
+	display: inline-flex;
+}
