--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -17,11 +17,10 @@
 .header__inner {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .header__image {
-	display: block;
-	margin: 0 auto;
 	max-width: 125px;
 	border-radius: 50%;
 	aspect-ratio: 1 / 1;
